--- a/PoorMansTSqlFormatterLib/PoorMansTSqlFormatterLib.csproj
+++ b/PoorMansTSqlFormatterLib/PoorMansTSqlFormatterLib.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net8.0</TargetFramework>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="10.9.0.115408">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
